# GAsmTaskMaster

./: myproject_variables.cmake
src/server/: CMakeLists.txt
